# zk-static-call

./: .gitignore  Cargo.toml  README.md
examples/: multi_promise_circuit.rs  zkevm_circuit.rs
src/: builder.rs  circuit.rs  common.rs  env.rs  error.rs  inputs_builder.rs  main.rs  types.rs
src/anvil/: conversion.rs
src/init_state/: account.rs  input.rs  mod.rs  storage.rs  table.rs
