[package]
name = "zk-eth-call"
version = "0.1.0"
edition = "2021"

[dependencies]
# anvil
anvil = { git = "https://github.com/foundry-rs/foundry.git", package = "anvil",  features = [ "default" ], rev = "6570a4c" }
anvil-core = { git = "https://github.com/foundry-rs/foundry.git", package = "anvil-core",  features = [ "default" ], rev = "6570a4c" }
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "80ac394" }
# partial-mpt = { git = "https://github.com/zemse/partial-mpt", branch = "main" }

# zkevm
bus-mapping = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits", branch = "main", features = [ "test" ] }
eth-types = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits", branch = "main" }
zkevm-circuits = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits", branch = "main" }
axiom-eth = { path = "../axiom-eth/axiom-eth", default-features = false, features = ["halo2-pse", "aggregation", "evm"] }
ethers-core = "2.0.6"
ethers-providers = "2.0.6"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }
itertools = "0.10"
rand_chacha = "0.3"

# misc
tokio = { version = "1.28", features = ["macros"] }
futures = { version = "0.3.*" }
dotenv = "0.15.0"
bytes = "1.1.0"
clap = { version = "4.0", features = ["derive"] }

# [patch."https://github.com/privacy-scaling-explorations/zkevm-circuits"]
# bus-mapping = { git = "https://github.com/zemse/zkevm-circuits", branch = "proof-of-exploit", features = [ "test" ] }
# eth-types = { git = "https://github.com/zemse/zkevm-circuits", branch = "proof-of-exploit" }
# zkevm-circuits = { git = "https://github.com/zemse/zkevm-circuits", branch = "proof-of-exploit" }

# for local development only
[patch."https://github.com/privacy-scaling-explorations/zkevm-circuits"]
bus-mapping = { path = "../zkevm-circuits/bus-mapping" }
eth-types = { path = "../zkevm-circuits/eth-types" }
zkevm-circuits = { path = "../zkevm-circuits/zkevm-circuits" }