[package]
name = "zk-eth-call"
version = "0.1.0"
edition = "2021"

[dependencies]
# anvil
anvil = { git = "https://github.com/foundry-rs/foundry.git", package = "anvil",  features = [ "default" ], rev = "6570a4c" }
anvil-core = { git = "https://github.com/foundry-rs/foundry.git", package = "anvil-core",  features = [ "default" ], rev = "6570a4c" }
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "80ac394" }

# circuits
bus-mapping = { git = "https://github.com/zemse/zkevm-circuits", rev = "e23dda4b", features = [ "test" ] }
eth-types = { git = "https://github.com/zemse/zkevm-circuits", rev = "e23dda4b" }
zkevm-circuits = { git = "https://github.com/zemse/zkevm-circuits", rev = "e23dda4b" }
axiom-eth = { git = "https://github.com/zemse/axiom-eth", rev = "3298386e", default-features = false, features = ["halo2-pse", "aggregation", "evm"] }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }

# misc
ethers-core = "2.0.6"
ethers-providers = "2.0.6"
itertools = "0.10"
rand_chacha = "0.3"
tokio = { version = "1.28", features = ["macros"] }
futures = { version = "0.3.*" }
dotenv = "0.15.0"
bytes = "1.1.0"
clap = { version = "4.0", features = ["derive"] }

# for local development only
# [patch."https://github.com/zemse/zkevm-circuits"]
# bus-mapping = { path = "../zkevm-circuits/bus-mapping" }
# eth-types = { path = "../zkevm-circuits/eth-types" }
# zkevm-circuits = { path = "../zkevm-circuits/zkevm-circuits" }

# [patch."https://github.com/zemse/axiom-eth"]
# axiom-eth = { path = "../axiom-eth/axiom-eth", default-features = false, features = ["halo2-pse", "aggregation", "evm"] }

# [patch."https://github.com/axiom-crypto/halo2-lib.git"]
# halo2-base = { path = "../halo2-lib/halo2-base" }
# halo2-ecc = { path = "../halo2-lib/halo2-ecc" }
